# btc-signal-dashboard

./: .gitignore  advanced_ml.py  analyze.py  build_10_strategies.py  data_fetcher.py  deploy_train.py  enhance_features.py  extreme_strategies.py  feasibility_check.py  features.py  fetch_external_data.py  fetch_test.py  fetch_test2.py  final_10_strategies.json  final_corrected_summary.py  final_deliverable.py  final_graph.py  final_strategies_90.json  final_ultimate_v2.py  graph_round1.py  graph_round2.py  graph_round3.py  ml_quick_test.py  ml_strategies.py  optimization_round_1.json  optimization_round_2.json  optimization_round_3.json  optimizer.py  optimizer_round2.py  optimizer_round2_focused.py  optimizer_round3.py  push_to_90.py  pyproject.toml  retrain_date_split.py  retrain_honest.py  save_models.py  start.sh  strategies.py  test_advanced_gb.py  test_conditional.py  (+5 more)
.github/workflows/: deploy.yml
.playwright-mcp/: page-2026-07-21T10-59-59-032Z.yml  page-2026-07-21T11-13-00-446Z.yml  page-2026-07-21T11-32-14-286Z.yml  page-2026-07-21T11-32-29-230Z.yml  page-2026-07-21T11-36-44-217Z.yml  page-2026-07-21T11-36-54-896Z.yml  page-2026-07-21T11-46-33-656Z.yml  page-2026-07-21T11-54-55-568Z.yml  page-2026-07-21T11-55-43-581Z.yml
api/: backfill.py  binance_client.py  live_features.py  main.py  optimize_thresholds.py  predictor.py  resolved.json  stats.json
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  (+2 more)
models/: cat.cbm  hgb.joblib  lgb.txt  lr_all.joblib  lr_comb.joblib  metadata.json  scaler_all.joblib  scaler_comb.joblib  xgb.json
(+8 files in other folders)
