[project]
name = "ai-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [

    "catboost>=1.2.10",
    "fastapi>=0.115.0",
    "lightgbm>=4.7.0",
    "matplotlib>=3.11.0",
    "numpy>=1.26.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "xgboost>=3.2.0",
    "yfinance>=1.5.1",
]

[tool.setuptools]
packages = []
py-modules = []
